# nats-bug

./: .rustfmt.toml  Cargo.toml
src/: main.rs  test.rs
