[package]
name = "nats-bug"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.45"
async-nats = "0.10.1"
async-std = { version = "1.10.0", features = ["attributes"] }
nats_test_server = "0.3.0"
